﻿v8.6
-----


v8.5
-----
+ Added dynamic store data to wishlist pages
+ Added a button to profile backgrounds in your inventory to set them as your background with a single click
+ Added release date information for unreleased games on wishlist pages
+ Added a media slider to store and workshop pages to expand the screenshots and movies section
+ Added an "Add to your wishlist" button on other people's wishlist pages
+ Added an option to skip the "Got Steam" dialog on store pages
+ Added a link to the web chat to the Community dropdown menu when logged in
+ Added highlighting and tagging options for items marked as "Not Interested"
+ Added a button to toggle HD playback of videos on app pages
+ Added a button to profile background market pages to preview that background on your own profile
: Changing view options on the badges page no longer requires a page reload
: Improved performance of continuous scolling feature
: Changing sorting options on wishlist pages will no longer cause the page to reload
: Fixed a bug where some functions weren't working correctly for users who hadn't configured a custom URL
: Fixed a bug that caused the "New on Steam" section's visibility on the homepage not to toggle
: Fixed a bug that would occur when trying to leave multiple groups if there was an error on the page
: Fixed a bug that caused the homepage carousel to not display correctly until it scrolled past the first item
: Fixed a bug where adding games to your wishlist from the community hub would result in an error

v8.4
-----
+ Added inventory market support for various games such as H1Z1 and Battleblock Theater
+ Added ability to determine difference between JPY and CNY currency codes
: Fixed an issue where search results would be duplicated or incorrect under certain circumstances
: Fixed a bug where some market sections weren't being totaled correctly
: Fixed a bug where "Open in Steam" would not work if Family settings were enabled