@@ -473,5 +473,9 @@
         "option": "Show menu option to sync data to IsThereAnyDeal.com",
         "send_to_itad": "Send owned games to IsThereAnyDeal",
         "sending": "Loading your owned games and packages and sending them to IsThereAnyDeal.com"
+    },
+    "tradeoffer": {
+        "num_item": "__num__ item",
+        "num_items": "__num__ items"
     }
 }
